# Change_Lens

./: .gitignore  LICENSE.md  README.md  baseline.json  main.py  pyproject.toml
.github/workflows/: release.yml
changelens/: cli.py  models.py  pyproject.toml  ssh_baseline.json  test
changelens/core/: diff_engine.py  filters.py  generator.py  hasher.py  models.py  reporters.py  security.py  snapshot.py  verifier.py
changelens/storage/: json_store.py
