[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changelens"
version = "1.0.0"
description = "A high-performance file integrity monitoring CLI tool."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Mohamed" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
changelens = "changelens.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["changelens*"]